remove corpse version dependency by fully using protocol lib